[gd_scene load_steps=5 format=3 uid="uid://d14ve4kflwb2e"]

[ext_resource type="Script" path="res://button_shiny_animate/button_shiny_animate.gd" id="1_7886q"]
[ext_resource type="StyleBox" uid="uid://d4npjgmnp2yce" path="res://button_shiny_animate/button_shiny_style.tres" id="2_30306"]

[sub_resource type="Gradient" id="Gradient_lxp4n"]
offsets = PackedFloat32Array(0.00649351, 1)
colors = PackedColorArray(0.3, 0.3, 0.3, 1, 0.6, 0.6, 0.6, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xps3n"]
gradient = SubResource("Gradient_lxp4n")
fill_from = Vector2(1, 1)
fill_to = Vector2(0.866973, 0)

[node name="ButtonControl" type="Control"]
layout_mode = 3
anchor_left = 0.0763889
anchor_top = 0.135802
anchor_right = 0.257
anchor_bottom = 0.237
offset_left = -1.52588e-05
offset_top = 0.000305176
offset_right = -8.064
offset_bottom = -9.576
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(160, 32)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_7886q")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
modulate = Color(0.576333, 1, 0.18, 1)
clip_children = 1
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
offset_bottom = -1.76
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = ExtResource("2_30306")
theme_override_styles/disabled = ExtResource("2_30306")
theme_override_styles/hover = ExtResource("2_30306")
theme_override_styles/pressed = ExtResource("2_30306")
theme_override_styles/normal = ExtResource("2_30306")
metadata/_edit_lock_ = true

[node name="Color" type="TextureRect" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_xps3n")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Button"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(232, 52)
theme_override_colors/font_color = Color(0, 0, 0, 0.733333)
theme_override_font_sizes/font_size = 24
text = "ButtonControl"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="ButtonSide" type="Panel" parent="."]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
offset_right = 8.0
offset_bottom = 6.24
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_30306")
metadata/_edit_lock_ = true

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
